//
// Licensed to the Apache Software Foundation (ASF) under one
// or more contributor license agreements.  See the NOTICE file
// distributed with this work for additional information
// regarding copyright ownership.  The ASF licenses this file
// to you under the Apache License, Version 2.0 (the
// "License"); you may not use this file except in compliance
// with the License.  You may obtain a copy of the License at
//
//   http://www.apache.org/licenses/LICENSE-2.0
//
// Unless required by applicable law or agreed to in writing,
// software distributed under the License is distributed on an
// "AS IS" BASIS, WITHOUT WARRANTIES OR CONDITIONS OF ANY
// KIND, either express or implied.  See the License for the
// specific language governing permissions and limitations
// under the License.
//

/**
 * Licensed to the Apache Software Foundation (ASF) under one
 * or more contributor license agreements.  See the NOTICE file
 * distributed with this work for additional information
 * regarding copyright ownership.  The ASF licenses this file
 * to you under the Apache License, Version 2.0 (the
 * "License"); you may not use this file except in compliance
 * with the License.  You may obtain a copy of the License at
 *
 *   http://www.apache.org/licenses/LICENSE-2.0
 *
 * Unless required by applicable law or agreed to in writing,
 * software distributed under the License is distributed on an
 * "AS IS" BASIS, WITHOUT WARRANTIES OR CONDITIONS OF ANY
 * KIND, either express or implied.  See the License for the
 * specific language governing permissions and limitations
 * under the License.
 */
syntax = "proto3";

package org.apache.pinot.common.proto;

message StageNode {
  int32 stageId = 1;
  string nodeName = 2;
  repeated StageNode inputs = 3;
  ObjectField objectField = 4;
}

// MemberVariableField defines the serialized format of the member variable
message MemberVariableField {
  oneof member_variable_field {
    LiteralField literalField = 1;
    ListField listField = 2;
    MapField mapField = 3;
    ObjectField objectField = 4;
  }
}

message ObjectField {
  // clazz of the object defined.
  string objectClassName = 1;
  // map from member variable name to the member variable field definition
  map<string, MemberVariableField> memberVariables = 2;
}

message LiteralField {
  oneof literal_field {
    bool boolField = 1;
    int32 intField = 2;
    int64 longField = 3;
    double doubleField = 4;
    string stringField = 5;
  }
}

message ListField {
  repeated MemberVariableField content = 1;
}

message MapField {
  map<string, MemberVariableField> content = 1;
}